--- a/view/afficher_flux.css
+++ b/view/afficher_flux.css
@@ -2,17 +2,23 @@ ul#Menu li {
   display: inline;
   padding: 0 1em;
   line-height: 50px;
-  border-right: 1px solid blue;
   height: auto;
 }
 
 ul{
   background-color: rgb(128,128,128);
   height: 50px;
-  text-align: center;
+  text-align: left;
+  margin: 0;
+  padding: 0;
 }
 
 li a{
+  text-decoration: none;
+  width: 70;
+}
+
+button a {
   text-decoration: none;
 }
 
@@ -22,4 +28,19 @@ h1 {
 
 p{
   border: 2px black dashed;
+}
+
+div.Recherche {
+  text-align: center;
+    line-height: 100px;
+}
+
+input#search {
+    width: 400px;
+    height: 20px;
+}
+
+input#search-btn {
+    width: 100px;
+    height: 100px;
 }
