optimisation de afficher_flux.ctrl.php en partie faite

--- a/view/afficher_flux.css
+++ b/view/afficher_flux.css
@@ -5,6 +5,10 @@ ul#Menu li {
   height: auto;
 }
 
+li#connexion {
+  text-align: right;
+}
+
 ul{
   background-color: rgb(128,128,128);
   height: 50px;
