--- a/view/afficher_nouvelles.css
+++ b/view/afficher_nouvelles.css
@@ -1,21 +1,21 @@
 ul#Menu li {
-  display: inline;
-  padding: 0 1em;
-  line-height: 50px;
-  height: auto;
+	display: inline;
+	padding: 0 1em;
+	line-height: 50px;
+	height: auto;
 }
 
-ul{
-  background-color: rgb(128,128,128);
-  height: 50px;
-  text-align: center;
+ul {
+	background-color: rgb(128, 128, 128);
+	height: 50px;
+	text-align: center;
 }
 
-li a{
-  text-decoration: none;
-  color: black;
+li a {
+	text-decoration: none;
+	color: black;
 }
 
 h1 {
-  font-family: Comic Sans MS;
+	font-family: Comic Sans MS;
 }
